--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.6.8",
     "quasar": "^2.0.0",
     "vue": "^3.0.0",
+    "vue-round-slider": "^1.0.1",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
